--- a/shippable.yml
+++ b/shippable.yml
@@ -8,9 +8,7 @@ jdk:
 build:
   pre_ci_boot:
     image_name: dry-dock/u14jav
-    image_tag: prod
     pull: true
-    options: '--privileged=true --net=bridge -e FOO=true -e BOO=false'
 
   pre_ci:
     - echo "this is master branch"
@@ -21,3 +19,5 @@ build:
   post_ci:
     - ls -a
     - pwd
+    
+  cache: true
